<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="putANumber">Ingresar un numero</string>
    <string name="sum" translatable="false">+</string>
    <string name="result">El resultado es:</string>
    <string name="subtraction" translatable="false">-</string>
    <string name="multi" translatable="false">*</string>
    <string name="division" translatable="false">/</string>
    <string name="percent" translatable="false">%</string>
    <string name="hi">Hola</string>
    <string name="articles_list">Lista de articulos</string>
    <string name="articulos_title">Articulos</string>
    <string name="enter_code">Ingrese el codigo y presione nuevamente</string>
    <string name="enter_description">Ingrese la descripcion</string>
    <string name="enter_price">Ingrese el precio</string>
    <string name="up_data">ALTA</string>
    <string name="modification">MODIFICACION</string>
    <string name="down_code">BAJA POR CODIGO</string>
    <string name="code_query">CONSULTA POR CODIGO</string>
    <string name="see_list_articles">VER LISTA DE ARTICULOS</string>
    <string name="description_query">CONSULTA POR DESCRIPCION</string>
    <string name="Open101">Open101</string>
    <string name="add_user">Ingresar usuario</string>
    <string name="add_password">Ingresar contraseña</string>
    <string name="add_rememberUser">Recordar usuario</string>
    <string name="term_conditions">Terminos y condiciones</string>
    <string name="add_CreateUser">Crear usuario</string>
    <string name="add_EnterSession">Iniciar sesión</string>
    <string name="hint_compare_password">Repita contraseña</string>
    <string name="hint_password">Contraseña:</string>
    <string name="hint_birth">Fecha de nacimiento:</string>
    <string name="hint_user">Usuario:</string>
    <string name="hint_email">Email:</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="content">"        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</string>
    <string name="add_book">Agregar libro</string>
    <string name="edit_book">Editar libro</string>
    <string name="erase_book">Borrar libro</string>
    <string name="book_name_add">Nombre del libro:</string>
    <string name="author_book_add" tools:ignore="Typos">Autor del libro:</string>
    <string name="year_book_add">Año de publicación:</string>
    <string name="gender_book_add">Genero del libro:</string>
    <string name="units_available">Unidades disponibles:</string>
    <string name="delete_book">Eliminar libro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentText2">El objetivo de este laboratorio es aplicar los conceptos básicos vistos acerca de Fragmentos. Para ello se creará un nuevo proyecto. Se deberá crear una Activity que contenga dos fragmentos. Un fragmento se creará de manera estática, y el otro de manera dinámica. El “background” de cada fragmento tendrá un color distinto para diferenciarlos de manera evidente. El primer fragmento contendrá un botón centrado con el texto “MOSTRAR CONTENIDO”</string>
    <string name="escriba_su_nombre">Escriba su nombre</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="base_de_datos">Base de datos</string>
    <string name="t_c">T.C.</string>
    <string name="calcu">Calcu</string>
    <string name="doggy">DoggyDB</string>
    <string name="art">Art</string>
    <string name="books">Books</string>
    <string name="super3">SuperDB</string>
    <string name="frags">Frags</string>
    <string name="userdb">UserDB</string>
    <string name="todo">TODO</string>
    <string name="agregar_libros">Agregar libros</string>
    <string name="salir_sin_guardar">Salir sin guardar</string>
    <string name="mis_libros">Mis libros</string>
    <string name="nombre_del_libro">Nombre del libro:</string>
    <string name="autor_del_libro" tools:ignore="Typos">Autor del libro:</string>
    <string name="salir">Salir</string>
    <string name="usuarios">Usuarios</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="powerstats">Powerstats:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="strength">Strength:</string>
    <string name="speed">Speed:</string>
    <string name="durability">Durability:</string>
    <string name="power">Power:</string>
    <string name="combat">Combat:</string>
    <string name="biography">Biography:</string>
    <string name="full_name">Full-name:</string>
    <string name="alter_egos">Alter-egos:</string>
    <string name="aliases">Aliases:</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="first_appearance">First appearance:</string>
    <string name="publisher">Publisher:</string>
    <string name="alignment">Alignment:</string>
    <string name="appearance">Appearance:</string>
    <string name="gender">Gender:</string>
    <string name="race">Race:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="eye_color">Eye color:</string>
    <string name="hair_color">Hair color:</string>
    <string name="work">Work:</string>
    <string name="occupation">Occupation:</string>
    <string name="base">Base:</string>
    <string name="connections">Connections:</string>
    <string name="group_affiliation">Group Affiliation:</string>
    <string name="relatives">Relatives:</string>
    <string name="o_si_no_lo_sabes_el_nombre">O si no lo sabes, el nombre:</string>
    <string name="escribe_el_id">Escribe el id:</string>
    <string name="superheroes_database">Superheroes Database</string>
    <string name="ver_lista_de_usuarios">Ver lista de usuarios</string>
    <string name="plusButton">+</string>
    <string name="minButton">-</string>
    <string name="dog_list">Dog List</string>
    <string name="escriba_la_raza">Escriba la raza:</string>
    <string name="temperature_converter">Temperature converter</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="ingresar_con_google">\tIngresar con Google</string>
    <string name="ingreso_manual">INGRESO MANUAL</string>
    <string name="tu_contrase_a">Tu contraseña</string>
    <string name="tu_email">Tu email</string>
    <string name="perdiste_tu_contrase_a">¿PERDISTE TU CONTRASEÑA?</string>
    <string name="no_ten_s_cuenta">¿No tenés cuenta?</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="ingreso_rapido">INGRESO RAPIDO</string>
</resources>